language/move-lang/tests/move_check/expansion/pack_no_fields_block_expr.exp
error: 

   ┌── tests/move_check/expansion/pack_no_fields_block_expr.move:4:19 ───
   │
 4 │         let s = S { let x = 0; x };
   │                   ^^^^^^^^^^^^^^^^ Invalid fields for struct construction. Expected: named arguments
   │

error: 

   ┌── tests/move_check/expansion/pack_no_fields_block_expr.move:5:19 ───
   │
 5 │         let s = S { let y = 0; let z = 0; x + foo() };
   │                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid fields for struct construction. Expected: named arguments
   │

